bindings/c/include/taffy.h


typedef enum TaffyDisplay {
  TAFFY_DISPLAY_BLOCK,
  TAFFY_DISPLAY_FLEX,
  TAFFY_DISPLAY_GRID,
  TAFFY_DISPLAY_NONE,
} TaffyDisplay;
typedef enum TaffyReturnCode {
  TAFFY_RETURN_CODE_OK,
  TAFFY_RETURN_CODE_NULL_STYLE_POINTER,
  TAFFY_RETURN_CODE_NULL_TREE_POINTER,
  TAFFY_RETURN_CODE_INVALID_NODE_ID,
  TAFFY_RETURN_CODE_INVALID_ENUM_VALUE,
  TAFFY_RETURN_CODE_INVALID_NONE,
  TAFFY_RETURN_CODE_INVALID_POINTS,
  TAFFY_RETURN_CODE_INVALID_PERCENT,
  TAFFY_RETURN_CODE_INVALID_MIN_CONTENT,
  TAFFY_RETURN_CODE_INVALID_MAX_CONTENT,
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PX,
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PERCENT,
  TAFFY_RETURN_CODE_INVALID_AUTO,
  TAFFY_RETURN_CODE_INVALID_FR,
  TAFFY_RETURN_CODE_UNEXPECTED_NA_N,
  TAFFY_RETURN_CODE_UNEXPECTED_INFINITY,
  TAFFY_RETURN_CODE_UNEXPECTED_NEGATIVE,
} TaffyReturnCode;
typedef enum TaffyPosition {
  TAFFY_POSITION_RELATIVE,
  TAFFY_POSITION_ABSOLUTE,
} TaffyPosition;
typedef enum TaffyOverflow {
  TAFFY_OVERFLOW_VISIBLE,
  TAFFY_OVERFLOW_CLIP,
  TAFFY_OVERFLOW_HIDDEN,
  TAFFY_OVERFLOW_SCROLL,
} TaffyOverflow;
typedef enum TaffyAlignContent {
  TAFFY_ALIGN_CONTENT_NORMAL,
  TAFFY_ALIGN_CONTENT_START,
  TAFFY_ALIGN_CONTENT_END,
  TAFFY_ALIGN_CONTENT_FLEX_START,
  TAFFY_ALIGN_CONTENT_FLEX_END,
  TAFFY_ALIGN_CONTENT_CENTER,
  TAFFY_ALIGN_CONTENT_STRETCH,
  TAFFY_ALIGN_CONTENT_SPACE_BETWEEN,
  TAFFY_ALIGN_CONTENT_SPACE_EVENLY,
  TAFFY_ALIGN_CONTENT_SPACE_AROUND,
} TaffyAlignContent;
typedef enum TaffyAlignItems {
  TAFFY_ALIGN_ITEMS_NORMAL,
  TAFFY_ALIGN_ITEMS_START,
  TAFFY_ALIGN_ITEMS_END,
  TAFFY_ALIGN_ITEMS_FLEX_START,
  TAFFY_ALIGN_ITEMS_FLEX_END,
  TAFFY_ALIGN_ITEMS_CENTER,
  TAFFY_ALIGN_ITEMS_BASELINE,
  TAFFY_ALIGN_ITEMS_STRETCH,
} TaffyAlignItems;
typedef enum TaffyFlexDirection {
  TAFFY_FLEX_DIRECTION_ROW,
  TAFFY_FLEX_DIRECTION_COLUMN,
  TAFFY_FLEX_DIRECTION_ROW_REVERSE,
  TAFFY_FLEX_DIRECTION_COLUMN_REVERSE,
} TaffyFlexDirection;
typedef enum TaffyFlexWrap {
  TAFFY_FLEX_WRAP_NO_WRAP,
  TAFFY_FLEX_WRAP_WRAP,
  TAFFY_FLEX_WRAP_WRAP_REVERSE,
} TaffyFlexWrap;
typedef enum TaffyUnit {
  TAFFY_UNIT_NONE,
  TAFFY_UNIT_LENGTH,
  TAFFY_UNIT_PERCENT,
  TAFFY_UNIT_MIN_CONTENT,
  TAFFY_UNIT_MAX_CONTENT,
  TAFFY_UNIT_FIT_CONTENT_PX,
  TAFFY_UNIT_FIT_CONTENT_PERCENT,
  TAFFY_UNIT_AUTO,
  TAFFY_UNIT_FR,
} TaffyUnit;
typedef enum TaffyEdge {
  TAFFY_EDGE_TOP,
  TAFFY_EDGE_BOTTOM,
  TAFFY_EDGE_LEFT,
  TAFFY_EDGE_RIGHT,
  TAFFY_EDGE_VERTICAL,
  TAFFY_EDGE_HORIZONTAL,
  TAFFY_EDGE_ALL,
} TaffyEdge;
typedef enum TaffyMeasureMode {
  TAFFY_MEASURE_MODE_EXACT,
  TAFFY_MEASURE_MODE_FIT_CONTENT,
  TAFFY_MEASURE_MODE_MIN_CONTENT,
  TAFFY_MEASURE_MODE_MAX_CONTENT,
} TaffyMeasureMode;
typedef struct TaffyStyle TaffyStyle;
typedef struct TaffyTree TaffyTree;
typedef const struct TaffyStyle *TaffyStyleConstRef;
typedef struct TaffyStyle *TaffyStyleMutRef;
typedef struct TaffyDimension {
  float value;
  enum TaffyUnit unit;
} TaffyDimension;
typedef struct TaffyGridPlacement {
  int16_t start;
  int16_t end;
  uint16_t span;
} TaffyGridPlacement;
typedef struct TaffyTree *TaffyTreeOwnedRef;
typedef struct TaffyTree *TaffyTreeMutRef;
typedef struct TaffyNodeId {
  uint64_t _0;
} TaffyNodeId;
typedef struct TaffyNodeIdResult {
  enum TaffyReturnCode return_code;
  struct TaffyNodeId value;
} TaffyNodeIdResult;
typedef struct TaffyStyleMutRefResult {
  enum TaffyReturnCode return_code;
  TaffyStyleMutRef value;
} TaffyStyleMutRefResult;
typedef struct TaffySize {
  float width;
  float height;
} TaffySize;
typedef struct TaffySize (*TaffyMeasureFunction)(enum TaffyMeasureMode width_measure_mode,
                                                 float width,
                                                 enum TaffyMeasureMode height_measure_mode,
                                                 float height,
                                                 void *context);
typedef struct TaffyLayout {
  float x;
  float y;
  float width;
  float height;
} TaffyLayout;
typedef struct TaffyLayoutResult {
  enum TaffyReturnCode return_code;
  struct TaffyLayout value;
} TaffyLayoutResult;
typedef const struct TaffyTree *TaffyTreeConstRef;
enum TaffyDisplay TaffyStyle_GetDisplay(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetDisplay(TaffyStyleMutRef raw_style, enum TaffyDisplay value);
enum TaffyPosition TaffyStyle_GetPosition(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetPosition(TaffyStyleMutRef raw_style, enum TaffyPosition value);
enum TaffyOverflow TaffyStyle_GetOverflowX(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetOverflowX(TaffyStyleMutRef raw_style, enum TaffyOverflow value);
enum TaffyOverflow TaffyStyle_GetOverflowY(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetOverflowY(TaffyStyleMutRef raw_style, enum TaffyOverflow value);
int32_t TaffyStyle_GetAlignContent(TaffyStyleConstRef raw_style);
int32_t TaffyStyle_GetAlignItems(TaffyStyleConstRef raw_style);
int32_t TaffyStyle_GetAlignSelf(TaffyStyleConstRef raw_style);
int32_t TaffyStyle_GetJustifyContent(TaffyStyleConstRef raw_style);
int32_t TaffyStyle_GetJustifyItems(TaffyStyleConstRef raw_style);
int32_t TaffyStyle_GetJustifySelf(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetAlignContent(TaffyStyleMutRef raw_style, enum TaffyAlignContent value);
enum TaffyReturnCode TaffyStyle_SetAlignItems(TaffyStyleMutRef raw_style, enum TaffyAlignItems value);
enum TaffyReturnCode TaffyStyle_SetAlignSelf(TaffyStyleMutRef raw_style, enum TaffyAlignItems value);
enum TaffyReturnCode TaffyStyle_SetJustifyContent(TaffyStyleMutRef raw_style, enum TaffyAlignContent value);
enum TaffyReturnCode TaffyStyle_SetJustifyItems(TaffyStyleMutRef raw_style, enum TaffyAlignItems value);
enum TaffyReturnCode TaffyStyle_SetJustifySelf(TaffyStyleMutRef raw_style, enum TaffyAlignItems value);
enum TaffyFlexDirection TaffyStyle_GetFlexDirection(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetFlexDirection(TaffyStyleMutRef raw_style, enum TaffyFlexDirection value);
enum TaffyFlexWrap TaffyStyle_GetFlexWrap(TaffyStyleConstRef raw_style);
float TaffyStyle_GetAspectRatio(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetAspectRatio(TaffyStyleMutRef raw_style, float value);
enum TaffyReturnCode TaffyStyle_SetMargin(TaffyStyleMutRef raw_style, enum TaffyEdge edge, struct TaffyDimension value);
struct TaffyGridPlacement TaffyStyle_GetGridColumn(TaffyStyleMutRef raw_style);
enum TaffyReturnCode TaffyStyle_SetGridColumn(TaffyStyleMutRef raw_style, struct TaffyGridPlacement placement);
struct TaffyGridPlacement TaffyStyle_GetGridRow(TaffyStyleMutRef raw_style);
enum TaffyReturnCode TaffyStyle_SetGridRow(TaffyStyleMutRef raw_style, struct TaffyGridPlacement placement);
TaffyTreeOwnedRef TaffyTree_New(void);
enum TaffyReturnCode TaffyTree_Free(TaffyTreeOwnedRef raw_tree);
enum TaffyReturnCode TaffyTree_ComputeLayout(TaffyTreeMutRef raw_tree,
                                             struct TaffyNodeId node_id,
                                             float available_width,
                                             float available_height);
enum TaffyReturnCode TaffyTree_PrintTree(TaffyTreeMutRef raw_tree, struct TaffyNodeId node_id);
struct TaffyNodeIdResult TaffyTree_NewNode(TaffyTreeMutRef raw_tree);
enum TaffyReturnCode TaffyTree_RemoveNode(TaffyTreeMutRef raw_tree, struct TaffyNodeId node_id);
enum TaffyReturnCode TaffyTree_AppendChild(TaffyTreeMutRef raw_tree,
                                           struct TaffyNodeId parent_node_id,
                                           struct TaffyNodeId child_node_id);
struct TaffyStyleMutRefResult TaffyTree_GetStyleMut(TaffyTreeMutRef raw_tree, struct TaffyNodeId node_id);
enum TaffyReturnCode TaffyTree_SetNodeContext(TaffyTreeMutRef raw_tree,
                                              struct TaffyNodeId node_id,
                                              TaffyMeasureFunction measure_function,
                                              void *context);
struct TaffyLayoutResult TaffyTree_GetLayout(TaffyTreeConstRef raw_tree, struct TaffyNodeId node_id);