bindings/csharp/include/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Taffy
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "ctaffy";





        /// <summary>
        ///  Create a TaffyTree instance
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_New", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyNativeTree* TaffyTree_New();

        /// <summary>
        ///  Free a TaffyTree instance
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_Free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_Free(TaffyNativeTree* raw_tree);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_ComputeLayout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_ComputeLayout(TaffyNativeTree* raw_tree, TaffyNodeId node_id, float available_width, float available_height);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_PrintTree", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_PrintTree(TaffyNativeTree* raw_tree, TaffyNodeId node_id);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_NewNode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyNodeIdResult TaffyTree_NewNode(TaffyNativeTree* raw_tree);

        /// <summary>
        ///  Remove and Free a Node within a TaffyTree
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_RemoveNode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_RemoveNode(TaffyNativeTree* raw_tree, TaffyNodeId node_id);

        /// <summary>
        ///  Remove and Free a Node within a TaffyTree
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_AppendChild", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_AppendChild(TaffyNativeTree* raw_tree, TaffyNodeId parent_node_id, TaffyNodeId child_node_id);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_GetStyleMut", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyStyleMutRefResult TaffyTree_GetStyleMut(TaffyNativeTree* raw_tree, TaffyNodeId node_id);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_SetNodeContext", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyTree_SetNodeContext(TaffyNativeTree* raw_tree, TaffyNodeId node_id, delegate* unmanaged[Cdecl]<TaffyMeasureMode, float, TaffyMeasureMode, float, void*, TaffySize> measure_function, void* context);

        /// <summary>
        ///  Create a new Node in the TaffyTree. Returns a NodeId handle to the node.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyTree_GetLayout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyLayoutResult TaffyTree_GetLayout(TaffyNativeTree* raw_tree, TaffyNodeId node_id);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetAspectRatio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float TaffyStyle_GetAspectRatio(TaffyStyle* raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetAspectRatio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetAspectRatio(TaffyStyle* raw_style, float value);

        /// <summary>
        ///  Function to set all the value of margin
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMargin", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMargin(TaffyStyle* raw_style, TaffyEdge edge, TaffyDimension value);

        /// <summary>
        ///  Get grid item's column placement
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetGridColumn", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyGridPlacement TaffyStyle_GetGridColumn(TaffyStyle* raw_style);

        /// <summary>
        ///  Set grid item's column placement
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetGridColumn", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetGridColumn(TaffyStyle* raw_style, TaffyGridPlacement placement);

        /// <summary>
        ///  Get grid item's row placement
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetGridRow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyGridPlacement TaffyStyle_GetGridRow(TaffyStyle* raw_style);

        /// <summary>
        ///  Set grid item's row placement
        /// </summary>
        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetGridRow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetGridRow(TaffyStyle* raw_style, TaffyGridPlacement placement);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetDisplay", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDisplay TaffyStyle_GetDisplay(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetDisplay", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetDisplay(TaffyStyle* _raw_style, TaffyDisplay _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyPosition TaffyStyle_GetPosition(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetPosition(TaffyStyle* _raw_style, TaffyPosition _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetOverflowX", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyOverflow TaffyStyle_GetOverflowX(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetOverflowX", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetOverflowX(TaffyStyle* _raw_style, TaffyOverflow _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetOverflowY", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyOverflow TaffyStyle_GetOverflowY(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetOverflowY", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetOverflowY(TaffyStyle* _raw_style, TaffyOverflow _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetAlignContent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetAlignContent(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetAlignItems", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetAlignItems(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetAlignSelf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetAlignSelf(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetJustifyContent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetJustifyContent(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetJustifyItems", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetJustifyItems(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetJustifySelf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int TaffyStyle_GetJustifySelf(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetAlignContent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetAlignContent(TaffyStyle* _raw_style, TaffyAlignContent _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetAlignItems", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetAlignItems(TaffyStyle* _raw_style, TaffyAlignItems _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetAlignSelf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetAlignSelf(TaffyStyle* _raw_style, TaffyAlignItems _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetJustifyContent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetJustifyContent(TaffyStyle* _raw_style, TaffyAlignContent _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetJustifyItems", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetJustifyItems(TaffyStyle* _raw_style, TaffyAlignItems _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetJustifySelf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetJustifySelf(TaffyStyle* _raw_style, TaffyAlignItems _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetFlexDirection", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyFlexDirection TaffyStyle_GetFlexDirection(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetFlexDirection", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetFlexDirection(TaffyStyle* _raw_style, TaffyFlexDirection _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetFlexWrap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyFlexWrap TaffyStyle_GetFlexWrap(TaffyStyle* _raw_style);
